<resources>
    <string name="app_name">Calculate RSU Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="env_question">اختر المجال الذي تقطن فيه </string>
    <string name="env_rural_option">القروي </string>
    <string name="env_urban_option">الحضري </string>
    <string name="choose_region_qst">اختر الجهة </string>
    <string name="full_name_txt"> الإسم الكامل</string>
    <string name="age_txt"> السن</string>
    <string name="basic_education_option"> مستوى تعليمي أساسي</string>
    <string name="social_status_txt">الفئة الاجتماعية والمهنية لرب الأسرة:</string>
    <string name="without_option"> بدون</string>
    <string name="machinery_manager_txt"> رب الأسرة مسير للمعدات أو الآلات الثابتة</string>
    <string name="high_position_btn"> ذو إطار عالي أو يعمل في منصب مسؤول </string>
    <string name="craftsman_btn"> حرفي </string>
    <string name="peasant_exploiter_btn"> مستغل فلاحي </string>
    <string name="other_btn">آخر </string>
    <string name="position_in_job_txt">الوضع في الوظيفة </string>
    <string name="employee_btn_txt"> موظف</string>
    <string name="recruiter_btn_txt"> مشغل</string>
    <string name="does_commerce_question"> يمارس التجارة : </string>
    <string name="calculate_rsu"> حساب المؤشر </string>
    <string name="choose_regioQuestion"> اختر الجهة التي تقطن بها</string>
    <string name="write_full_name"> اكتب اسمك كامل...</string>
    <string name="full_name">الاسم كامل :</string>
    <string name="educational_level_of_householder">المستوى التعليمي لرب الأسرة :</string>
    <string name="high_education">تعليم العالي</string>
    <string name="health_security">التغطية الصحية : </string>
    <string name="has_health_security">يستفيد من التغطية الصحية </string>
    <string name="without_health_security">بدون تغطية صحية </string>
    <string name="literacy">معرفة القراءة و الكتابة : </string>
    <string name="has_high_education_diploma">حاصل على شهادة التعليم العالي : </string>
    <string name="yes">نعم</string>
    <string name="congrats_for_ones_part">تهانينا خالد. لقد أكملت الجزء الخاص بك</string>
    <string name="start">ابدأ</string>
    <string name="write_age">اكتب سنك...</string>
    <string name="start_home_part">ابدأ الجزء الخاص بالمنزل</string>
    <string name="house_type_quest">هل أسرة تقيم بفيال شقة دار تقليدية، دار قروية
مشيدة بالأحجار اليابسة أو بالأحجار المغطاة بالطين  ؟</string>
    <string name="no">لا</string>
    <string name="has_car"> هل تمتلك امتلاك سيارة ؟</string>
    <string name="has_motorcycle">هل تمتلك امتلاك دراجة نارية ؟</string>
    <string name="double_house">هل لديك سكن ثانوي ؟</string>
    <string name="have_non_agricultural_land"> هل تمتلك أراضي غير فلاحية ؟</string>
    <string name="have_arable_land">  هل تمتلك أراضي مسقية أو تستغلها الأسرة ؟</string>
    <string name="cows_number"> عدد الابقار</string>
    <string name="rooms_number"> عدد الغرف</string>
    <string name="write_number"> اكتب  العدد...</string>
    <string name="big_gas_bottles_number"> عدد قنينات الغاز الكبيرة في الشهر</string>
    <string name="small_gas_bottles_number"> عدد قنينات الغاز الصغيرة في الشهر</string>
    <string name="internet_bill"> فاتورة الإنترنت الشهرية </string>
    <string name="electricity_water_bill"> فاتورة الماء و الكهرباء :</string>
    <string name="electricity"> الكهرباء :</string>
    <string name="water"> الماء :</string>
    <string name="first_month"> الشهر الأول </string>
    <string name="second_month"> الشهر الثاني</string>
    <string name="third_month"> الشهر الثالث</string>
    <string name="add_family_member"> إضافة أحد أفراد العائلة</string>
    <string name="your_rsu_is"> مؤشرك الإجتماعي و الاقتصادي هو :</string>
    <string name="congrats_for_success_first">تهانينام</string>
    <string name="congrats_for_success_second">هذا المؤشر يخول لك الحصول على دعم</string>
    <string name="average_professional_position">ذو إطار متوسط</string>
    <string name="is_retired_or_beneficiary_Of_income">متقاعد او يستفيد من إيراد</string>
    <string name="highest_diploma_gotten">أعلى شهادة محصل عليها :</string>
    <string name="is_machinery_manager">هل يزاول نشاط تسيير للمعدات ؟ </string>
    <string name="certificate_or_diploma">شهادة أو دبلوم تقني </string>
    <string name="without_diploma">بدون شهادة </string>
    <string name="has_shower_or_bath"> هل التوفر على حمام أو رشاش : </string>
    <string name="electricity_meter_type"> نوع عداد الكهرباء الذي تمتلكه الأسرة : </string>
    <string name="individual_electricity_meter">فردي</string>
    <string name="phones_number">عدد الهواتف المحمولة :</string>
    <string name="motorcycles_number">عدد الدراجات النارية :</string>
    <string name="cars_number">عدد السيارات :</string>
    <string name="having_garage">توفر على مرآب :</string>
    <string name="having_shops">توفر على محلات مهنية :</string>
    <string name="having_computer">التوفر على حاسوب :</string>
    <string name="having_antenna">التوفر على لاقط هوائي :</string>
    <string name="having_fix"> التوفر على هاتف ثابت :</string>
    <string name="having_loan">الأسرة تستفيد من قرض :</string>
    <string name="having_second_house"> تتوفر على سكن ثانوي :</string>
    <string name="having_health_security"> هل يستفيد من التغطية الصحية ؟</string>
    <string name="goes_to_school"> هل يتمدرس ؟</string>
    <string name="in_which_sector"> في اي قطاع  ؟</string>
    <string name="has_diploma_or_certif"> هل يتوفر على شهاة أو ديبلوم ؟</string>
    <string name="social_and_economic_class">الفئة الاجتماعية و الاقتصادية  :</string>
    <string name="works">يعمل</string>
    <string name="private_school">خاص</string>
    <string name="public_school">عام</string>
    <string name="work_type">نوعية العمل :</string>
    <string name="update">تعديل</string>
    <string name="your_own_part"> الجزء الخاص بك</string>
    <string name="home_part">  الجزء الخاص بالمنزل</string>
    <string name="members_part">  الجزء الخاص بالأفراد</string>
    <string name="can_read_and_write">يستطيع القراءة و الكتابة :</string>
    <string name="recalculate_rsu">إعادة حساب المؤشر</string>
    <string name="machinery_management_activity">نشاط تسيير المعدات</string>
    <string name="edit_info">تعديل المعطيات :</string>
    <string name="member_name">فرد</string>
    <string name="confirmation_required">تصريح مطلوب</string>
    <string name="are_you_sure"> هل أنت متأكد أنك تريد الحذف</string>
    <string name="deletion_hint"> ستفقد جميع البيانات حول هذا الفرد</string>
    <string name="delete">حذف</string>
    <string name="back">الرجوع</string>
    <string name="done">تم</string>
    <string name="no_member_found">حاليا ليس هنالك اي فرد.</string>
    <string name="add_member">اضافة فرد</string>
    <string name="relationship_with_householder">العلاقة مع رب الأسرة :</string>
    <string name="child">ابن(ة)</string>
    <string name="partner">زوج (ة)</string>
    <string name="dirham">درهم</string>
    <string name="unfortunate_result">للأسف، هذا المؤشر لا يتيح لك الحصول على الدعم.</string>
    <string name="you_can_have_amo">يمكنك الحصول على دعم شامل من خلال الاشتراك الشهري بمبلغ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>