<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.rural.householder.RuralNameEducation"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_background"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/black_back"
                android:background="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/social_status_txt"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/machinery_manager_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/machinery_manager_txt"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/high_position_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_position_btn"
                android:layout_marginTop="10dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/craftsman_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/craftsman_btn"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/farmer_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/peasant_exploiter_btn"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/other_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/other_btn"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/position_in_job_txt"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recruiter_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recruiter_btn_txt"
               />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/without_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/without_option"
                />
        </LinearLayout>
    </ScrollView>


</FrameLayout>