<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.rural.householder.RuralNameEducation"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/black_back"
                android:background="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/position_in_job_txt"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/is_retired_or_beneficiary_Of_income_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/has_health_security"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/without_income_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/without_option"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/health_security"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/has_health_security_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/has_health_security"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/without_health_security_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/without_health_security"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/highest_diploma_gotten"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/has_diploma_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/certificate_or_diploma"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/without_diploma_btn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/without_diploma"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/is_machinery_manager"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/high_education_diploma_no_btn"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:layout_marginRight="15dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/high_education_diploma_yes_btn"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>